# ClaudeCLI

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  ClaudeCLI-Hotkey.ps1  ClaudeCLI.vbs  Configure-Hotkeys.ps1  LICENSE  README.md  REFACTORING-PLAN.md  Start-Hydra.ps1  _launcher.ps1  api-usage-tracker.ps1  commit-msg.txt  create-dev-shortcut.ps1  create-shortcuts.ps1  hydra-config.json  install-font.ps1  mcp-health-check.ps1  mcp-servers.json  profile.ps1
.claude/: Sync-ClaudeConfig.ps1  statusline-spec.json  statusline.js
.serena/: project.yml
_legacy/: _launcher.ps1
ai-handler/: AIFacade.psm1  AIModelHandler.psm1  AI_MANDATES.md  Demo-AIHandler.ps1  Initialize-AIHandler.ps1  Initialize-AdvancedAI.ps1  Install-Ollama.ps1  Invoke-AI.ps1  Invoke-AIConfig.ps1  Invoke-AIHealth.ps1  Invoke-AIHelp.ps1  Invoke-AIPull.ps1  Invoke-AIStatus.ps1  Invoke-QuickAI.ps1  Invoke-QuickAIBatch.ps1  README.md  Save-SessionToMemory.ps1  Set-AIHandlerEnv.ps1  Test-AIWithOptimizer.ps1  Test-NewCategories.ps1  Test-PromptOptimizer.ps1  Test-SmartClassification.ps1  ai-config.json  ai-handler-pipeline.json  prompt-optimizer-gemini.json  show-enhancements-config.json
analysis/: command-log.md
hydra-launcher/src-tauri/: Cargo.toml  tauri.conf.json
hydra-launcher/src-tauri/capabilities/: default.json
hydra-launcher/src-tauri/src/: commands.rs  config.rs  lib.rs  logger.rs  main.rs
hydra-launcher/src-tauri/src/mcp/: health.rs  mod.rs  server.rs
hydra-launcher/src-tauri/src/process/: claude.rs  mod.rs  ollama.rs  session.rs
installer/: README.md  (+1 more)
(+154 files in other folders)
