[package]
name = "hydra-launcher"
version = "10.4.0"
description = "HYDRA 10.4 - Four-Headed Beast Launcher"
authors = ["ClaudeHYDRA"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hydra_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# System info
sysinfo = "0.32"

# Logging
log = "0.4"

# Date/Time for log files
chrono = "0.4"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
